<resources>
    <string name="app_name">Glorpy: The Space Thing</string>
    <string name="fire_button">FIRE</string>
    <string name="score_text">SCORE: </string>
    <string name="health_text">HEALTH: </string>
    <string name="game_over">GAME OVER</string>
    <string name="exit_button">EXIT TO MAIN</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="scores_button">HIGH SCORES</string>
    <string name="scores_empty">There no scores to display. You could be #1!</string>
    <string name="enter_name">Enter your name!</string>
    <string name="rank_text">Rank:</string>
    <string name="submit">submit</string>
    <string name="user_name_hint">Enter up to 7 characters</string>
    <string name="user_name_error">Error: Please enter a valid username</string>
    <string name="upload_success">upload successful</string>
    <string name="upload_error">upload error: Please try again!</string>
    <string name="your_score_text">Best Score:</string>
    <string name="power">Power</string>
    <string name="speed">Speed</string>
    <string name="life">Life</string>
    <string name="back">back</string>
    <string name="points_avail">points</string>
    <string name="name_exists">Error: That name is already taken!</string>
    <string name="evo_obtained">Evolution point obtained!</string>
    <string name="play_button">Play</string>
    <string name="evo_button">Evolution</string>
    <string name="info_button">Information</string>
    <string name="highscore_button">High Scores</string>
    <string name="reward_button">Free PowerUps!</string>
    <string name="reward_toast">evolution points obtained!</string>
    <string name="time_remaining">Minutes remaining until next reward:</string>
    <string name="reward_not_ready">reward still loading: please try again</string>
    <string name="story_title">Story:</string>
    <string name="story_text">Glorpy is a… well a… a thing in space! At least that is all the
        earthlings know about it. Glorpy is not amused by their ignorance.
        The earthlings keep trying to land on Glorpy\'s planet and Glorpy wants them gone.
        Glorpy knows what they want. The earthlings are looking for another planet to destroy
        for resources. Take the role Glorpy and defend your home from the alien earthling invaders!
        The harder you fight, the more earthlings attack so survive as long as you can so your
        people can prepare the defense!</string>
    <string name="controls_title">Controls:</string>
    <string name="controls_text">Above is a picture of the controller that will be built into the
        phone screen. Use the arrow buttons to move Glorpy and use the fire ball picture button
        to shoot! </string>
    <string name="how_to_play_title">How to play:</string>
    <string name="how_to_play_text">Move Glorpy to dodge lasers, missiles, and kamikazes.
        Fire back with Glorpy\'s fireballs. Eat astronauts for health and watch for cargo boxes for
        earn evolution points! Upgrade Glorpy using your hard earned evolution points. How high can
        you get your score before going down?</string>
    <string name="evolution_title">Evolution:</string>
    <string name="evolution_text">Make Glorpy stronger by spending your evolution points! There are 3 categories. Power, Speed, and Life.
        \n \n Power: Upgrades Glorpy\'s fireball damage, durability, and reduces time between firing.
        \n \n Speed: Upgrades Glorpy\'s movement speed and fireball speed.
        \n \n Life: Upgrades Glorpy\'s max life and reduces damage taken.</string>
    <string name="title_reward_ad">Free PowerUps!</string>
    <string name="text_reward_ad">Get Free Rewards! It will only take a few seconds. Watch
        a short reward ad and receive 3 evolution points to upgrade Glorpy!
        You may receive rewards once every 30 minutes.</string>
    <string name="reward_confirm_message">You are about to watch a rewarded video ad. Would you like to proceed?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>
