<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <FrameLayout
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="#000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_item_info"
                android:text="@string/story_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_item_info"
                android:text="@string/story_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_item_info"
                android:text="@string/controls_title"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/glorpy_controller" />

            <TextView
                style="@style/text_item_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/controls_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_item_info"
                android:text="@string/how_to_play_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_item_info"
                android:text="@string/how_to_play_text"/>
            
        </LinearLayout>


    </ScrollView>
</RelativeLayout>