<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_over_screen"
    tools:context=".GameOverActivity">

    <ImageView
        android:id="@+id/glorpy_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/game_over_text"
        android:layout_centerHorizontal="true"
        android:src="@drawable/glorpy_game_over" />

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/concert_one"
        android:text="GAME OVER"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_over_text"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/concert_one"
            android:text="@string/score_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/concert_one"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/replay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/concert_one"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/view_scores_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/concert_one"
            android:text="@string/scores_button" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/concert_one"
            android:text="@string/exit_button" />

    </LinearLayout>


</RelativeLayout>