<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".EvolutionActivity">

    <FrameLayout
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/evolution_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title"
        android:layout_marginLeft="36dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_avail"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="@font/geo"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="@font/geo"
            android:text=" : "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/free_points"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:fontFamily="@font/geo"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/geo"
            android:text="@string/power"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decrease_power_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/power_mod_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/geo"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/increase_power_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/geo"
            android:text="@string/speed"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decrease_speed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speed_mod_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/geo"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/increase_speed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/geo"
            android:text="@string/life"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decrease_life_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/life_mod_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/geo"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/increase_life_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geo"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="36dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/geo"
            android:text="@string/submit"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>